--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <div class="content">
+        <h4>Simple Notification with JQuery</h4>
         <button data-content="effect top left" data-placement="top-left" id-notif="topleft1">Top left</button>
         <button data-content="effect top center" data-placement="top-center" id-notif="topcenter1">Top center</button>
         <button data-content="effect top right" data-placement="top-right" id-notif="topright1">Top right</button>
