--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <button data-content="effect bottom left" data-placement="bottom-left" id-notif="bottomleft1">bottom left</button>
         <button data-content="effect bottom center" data-placement="bottom-center" id-notif="bottomcenter1">bottom center</button>
         <button data-content="effect bottom right" data-placement="bottom-right" id-notif="bottomright1">bottom right</button>
+        <br>
+        <br>
+        <a href="https://github.com/fhdjg/gg-notif">Download</a>
     </div>
     
     <script type="text/javascript" src="plugin/jquery-3.2.1.min.js"></script>
